# fraudscore

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  STATE.md  cost_params.yaml  pyproject.toml
.github/workflows/: ci.yml
data/fixtures/: synthetic.csv
docs/: architecture.md  decisions.md  eval-report.md
scripts/: fetch_data.py  make_fixture.py
src/fraudscore/: __init__.py  calibrate.py  cli.py  cost.py  data.py  evaluate.py  features.py  serve.py  train.py
tests/: conftest.py  test_api.py  test_batch.py  test_bootstrap.py  test_calibrate.py  test_cost.py  test_data.py  test_features.py  test_integration.py  test_train.py
