[project]
name = "fraudscore"
version = "1.0.0"
description = "Calibrated card-fraud scoring with expected-cost decisions, served over FastAPI"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Rishik Kasula", email = "contact.rishikkasula@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.8",
    "duckdb>=1.0",
    "joblib>=1.4",
    "pyyaml>=6.0",
    "matplotlib>=3.9",
]

[project.scripts]
fraudscore = "fraudscore.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fraudscore"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # upstream: joblib 1.5 assigns ndarray.shape directly, deprecated in numpy 2.5
    "ignore:Setting the shape on a NumPy array has been deprecated:DeprecationWarning",
]
